<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pmp="http://schemas.android.com/res/de.unistuttgart.ipvs.pmp"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="3dp"
    android:layout_marginRight="3dp"
    android:orientation="vertical" >

    <de.unistuttgart.ipvs.pmp.gui.view.BasicTitleView
        pmp:name="@string/presets"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        pmp:backButton="true"
        pmp:icon="@drawable/icon_presets" >
    </de.unistuttgart.ipvs.pmp.gui.view.BasicTitleView>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:text="@string/presets_description" />
    </LinearLayout>

    <include layout="@layout/view_divider_strong" />

    <TextView
        android:id="@+id/Presets_Text_View_No_Presets_Existing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/presets_no_presets_existing" />

    <ListView
        android:id="@+id/ListView_Presets"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </ListView>

    <!-- TRASH BIN -->

    <LinearLayout
        android:id="@+id/Presets_Trash_Bin_Label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <include layout="@layout/view_divider_strong" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trash_bin"
            android:textSize="15dp"
            android:textStyle="bold" />

        <include layout="@layout/view_divider_strong" />
    </LinearLayout>

    <TextView
        android:id="@+id/Presets_Text_View_Trash_Bin_Empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/presets_trash_bin_empty" />

    <ListView
        android:id="@+id/ListView_Presets_Trash_Bin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>