<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pmp="http://schemas.android.com/res/de.unistuttgart.ipvs.pmp"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="3dp"
    android:layout_marginRight="3dp"
    android:orientation="vertical" >

    <de.unistuttgart.ipvs.pmp.gui.view.BasicTitleView
        android:id="@+id/Title"
        pmp:name="@string/service_feature_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        pmp:icon="@drawable/icon_sfs" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView_Description"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

            <LinearLayout
                android:id="@+id/LinearLayout_Container_PS_Information"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <de.unistuttgart.ipvs.pmp.gui.view.BasicTitleViewCompact
                    pmp:name="@string/required_privacy_settings"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    pmp:icon="@drawable/icon_rgs" />

                <LinearLayout
                    android:id="@+id/LinearLayout_PrivacySettings"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout_Container_RG_Information"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <de.unistuttgart.ipvs.pmp.gui.view.BasicTitleViewCompact
                    pmp:name="@string/required_resources"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    pmp:icon="@drawable/icon_rgs" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/missing_rgs_description" />

                <Button
                    android:id="@+id/Button_ViewMissingRGs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/missing_rgs_show" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/Button_EnableDisable"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/Button_Close"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/close" />
    </LinearLayout>

</LinearLayout>