<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pmp="http://schemas.android.com/apk/res/de.unistuttgart.ipvs.pmp"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="3dp"
    android:layout_marginRight="3dp"
    android:orientation="vertical" >

    <de.unistuttgart.ipvs.pmp.gui.view.BasicTitleView
        pmp:name="@string/pmp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        pmp:icon="@drawable/icon" >
    </de.unistuttgart.ipvs.pmp.gui.view.BasicTitleView>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_description" >
            </TextView>

            <include layout="@layout/view_divider_strong" >
            </include>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/Button_Apps"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:drawablePadding="10dp"
                    android:drawableTop="@drawable/icon_apps"
                    android:paddingTop="25sp"
                    android:text="@string/apps" >
                </Button>

                <Button
                    android:id="@+id/Button_RGs"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:drawablePadding="10dp"
                    android:drawableTop="@drawable/icon_rgs2"
                    android:paddingTop="25sp"
                    android:text="@string/resources" >
                </Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <de.unistuttgart.ipvs.pmp.gui.util.AlwaysClickableButton
                    android:id="@+id/Button_Presets"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:drawablePadding="10dp"
                    android:drawableTop="@drawable/icon_presets2"
                    android:paddingTop="25sp"
                    android:text="@string/presets" >
                </de.unistuttgart.ipvs.pmp.gui.util.AlwaysClickableButton>

                <Button
                    android:id="@+id/Button_Settings"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:drawablePadding="10dp"
                    android:drawableTop="@drawable/icon_settings"
                    android:paddingTop="25sp"
                    android:text="@string/settings" >
                </Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:contentDescription="@string/statistics"
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:layout_marginRight="3dp"
                    android:src="@drawable/icon_statistics" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-3dp"
                    android:text="@string/statistics" />
            </LinearLayout>

            <include layout="@layout/view_divider_strong" >
            </include>

            <TextView
                android:id="@+id/TextView_Apps"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/TextView_RGs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/TextView_Presets"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_gravity="bottom|right"
                android:layout_weight="1"
                android:text="@string/app_version"
                android:textColor="#777777"
                android:textSize="10dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>